# LETHE

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md  adr_backlog.md  config.example.toml  domain_algebra.md  notion_page_spec.md  plan.md  runtime_reference_architecture.md  sharding_refactor.md
.github/: copilot-instructions.md
.github/workflows/: public-release-guard.yml
apps/selfhost/: Cargo.toml  Dockerfile
apps/selfhost/src/: attribute_inventory.rs  lib.rs  main.rs
apps/selfhost/src/self_host/: config.rs  failover_spool.rs  google.rs  import_client.rs  mcp.rs  mcp_contract.rs  mod.rs  registry.rs  server.rs  slack.rs
apps/selfhost/src/self_host/app/: bulk_import.rs  media_support.rs  mod.rs  notion_workflow.rs  projection_api.rs  search_index.rs  service_support.rs  slide_support.rs  supplemental_write.rs  sync.rs  sync_support.rs  tests.rs
apps/tools/lethe-import-chatgpt/: Cargo.toml
apps/tools/lethe-import-chatgpt/src/: main.rs
apps/tools/lethe-import-history/: Cargo.toml
apps/tools/lethe-import-history/src/: main.rs
crates/adapters/api/: Cargo.toml
crates/adapters/api/src/: config.rs  conformance.rs  error.rs  heartbeat.rs  idempotency.rs  lib.rs  retry.rs  traits.rs  writeback.rs
crates/adapters/chatgpt/: Cargo.toml
crates/adapters/chatgpt/src/: importer.rs
crates/adapters/notion/: Cargo.toml
crates/adapters/notion/src/: lib.rs
crates/adapters/notion/src/notion/client/: media.rs  mod.rs  page_blocks.rs  tests.rs
crates/api/: Cargo.toml
crates/api/src/api/: envelope.rs  grep.rs  health.rs  mod.rs  pagination.rs  read_mode.rs
crates/core/: Cargo.toml
crates/derivations/gemini/: Cargo.toml
crates/derivations/gemini/src/: lib.rs
crates/derivations/gemini/src/slide_analysis/: gemini.rs  mod.rs  projector.rs  provider.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/identity/: mod.rs  projector.rs  state.rs  types.rs
crates/engine/src/lake/: blob.rs  ingestion.rs  mod.rs  store.rs
crates/engine/src/projection/: catalog.rs  lineage.rs  mod.rs  runner.rs  spec.rs
crates/engine/src/propagation/: idempotent.rs  mod.rs  scheduler.rs  watermark.rs
crates/engine/src/supplemental/: store.rs
crates/history/: Cargo.toml
crates/history/src/: lib.rs
crates/history/tests/fixtures/: history_activation_handoff.json
crates/lethe-adapter-gslides/: Cargo.toml
crates/lethe-adapter-slack/: Cargo.toml
crates/lethe-core/: Cargo.toml
crates/lethe-policy/: Cargo.toml
crates/lethe-projection-person/: Cargo.toml
crates/lethe-runtime/: Cargo.toml
crates/lethe-selfhost/: Cargo.toml
crates/lethe-selfhost/src/: lib.rs
crates/lethe-storage-api/: Cargo.toml
crates/lethe-storage-sqlite/: Cargo.toml
crates/policy/: Cargo.toml
crates/profile-model/: Cargo.toml
crates/projections/claim-queue/: Cargo.toml
crates/projections/claim-queue/src/: lib.rs
crates/projections/cognition/: Cargo.toml
crates/projections/cognition/src/: lib.rs
crates/projections/corpus/: Cargo.toml
crates/projections/corpus/src/: lib.rs
crates/projections/person/: Cargo.toml
crates/projections/person/src/: lib.rs
crates/projections/person/src/person_page/: projector.rs  types.rs
crates/registry/: Cargo.toml
crates/runtime/: Cargo.toml
crates/search-index/: Cargo.toml
crates/search-index/src/: index.rs  lib.rs  read.rs  schema.rs  search.rs  source.rs
crates/storage/postgres/: Cargo.toml
crates/storage/postgres/src/: lib.rs
crates/storage/sqlite/: Cargo.toml
crates/storage/sqlite/src/: lib.rs
crates/storage/sqlite/src/persistence/: cutover.rs  mod.rs  schema.rs  tests.rs
deploy/persistent-index-benchmark/: Dockerfile  compose.yaml  config.toml  mcp-jwks.json
deploy/personal-lake/: .env.example  compose.yaml  config.host.toml  config.toml  mcp-jwks.example.json
docs/: README.md
docs/architecture/: domain-algebra.md  governance-capability-model.md  history-ingestion.md  notion-writeback.md  operational-event-ledger.md  runtime-reference.md  sharding.md  system-overview.md
docs/archive/: design-questions.md  historical-implementer-prompt.md
docs/audits/: bug-audit-2026-06.md  openspec-verification-2026-06-22.md  slack-thread-catalog-result.md
docs/decisions/: adr-backlog.md
docs/development/: ai-collaboration.md  bulk-defer-noncorpus-result.md  complexity-audit-v151-20260724.md  consent-retraction-and-schema-strictness.md  identity-person-page-dsu-result.md  identity-person-page-local-reprojection.md  persistent-index-design.md  personal-lake-ingestion.md  principles-audit-20260722.md  replyslo-index-result.md  repository-layout.md  review-harness.md
docs/post/: 2026-07-08-roadmap-friendly-lake.md  README.md  TEMPLATE.md
openspec/: config.yaml  parallel-routing-integration-log.md  parallel-routing-plan.md
openspec/specs/: _index.md  adapter-policy.md  (+18 more)
scripts/: add_nanihold_token.ps1  add_operational_ledger_key.ps1  archive_claude_export.ps1  check_dependency_layers.ps1  check_markdown_links.py  claude_export_browser.mjs  dump_github_personal_lake.ps1  expand_claude_export.ps1  import_memory_harness.md  import_memory_harness.py  install_personal_lake_key_windows.ps1  lethe_status.ps1  new_personal_lake_env.ps1  notify_personal_lake_job_failure.ps1  persistent_index_benchmark.py  personal_lake_pipeline_smoke.py  personal_lake_sanity.py  personal_lake_w0_check.py  public-release-audit.ps1  public_release_audit.py  reauthorize_lethe_mcp.ps1  register_agent_source_lake_import_task.ps1  register_claude_personal_lake_daily_export.ps1  register_lethe_mcp_reauth_tasks.ps1  run_agent_source_lake_import.ps1  run_claude_personal_lake_daily_export.ps1  run_claude_personal_lake_import.ps1  start_personal_lake_services.cmd  start_personal_lake_services.ps1
src/: attribute_inventory.rs  lib.rs  storage_api.rs
tests/: adapter_integration.rs  lane_c_integration.rs  phase0_qa.rs  self_host_api.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: adapter_integration.rs  lane_c_integration.rs  mcp_read_port.rs  self_host_api.rs  sharding_storage.rs
(+298 files in other folders)
