[workspace]
resolver = "3"
members = [
    "apps/selfhost",
    "apps/tools/attribute-inventory",
    "apps/tools/lethe-import-claude",
    "apps/tools/lethe-import-claude-code",
    "apps/tools/lethe-import-chatgpt",
    "apps/tools/lethe-import-codex",
    "apps/tools/lethe-import-github",
    "apps/tools/lethe-import-history",
    "apps/tools/lethe-migrate-blob-index",
    "apps/tools/review-harness",
    "crates/adapters/api",
    "crates/adapters/claude",
    "crates/adapters/chatgpt",
    "crates/adapters/coding-agent",
    "crates/adapters/discord",
    "crates/adapters/gmail",
    "crates/adapters/github",
    "crates/adapters/gdocs",
    "crates/adapters/gdrive",
    "crates/adapters/gforms",
    "crates/adapters/gsheets",
    "crates/adapters/gslides",
    "crates/adapters/slack",
    "crates/api",
    "crates/core",
    "crates/derivations/gemini",
    "crates/engine",
    "crates/history",
    "crates/policy",
    "crates/profile-model",
    "crates/projections/answer-log",
    "crates/projections/claim-queue",
    "crates/projections/cognition",
    "crates/projections/corpus",
    "crates/projections/person",
    "crates/registry",
    "crates/runtime",
    "crates/search-index",
    "crates/storage/api",
    "crates/storage/postgres",
    "crates/storage/sqlite",
    "tests/e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
aes-gcm = "0.10"
arc-swap = "1.9"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
jsonschema = "0.29"
pretty_assertions = "1"
postgres = "0.19"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
ring = "0.17.14"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tantivy = { version = "=0.26.1", default-features = false, features = ["lz4-compression", "mmap"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower = "0.5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
