[package]
name = "lethe-selfhost"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
dotenvy.workspace = true
image.workspace = true
lethe-adapter-api = { path = "../../crates/adapters/api" }
lethe-adapter-gslides = { path = "../../crates/adapters/gslides" }
lethe-adapter-notion = { path = "../../crates/adapters/notion" }
lethe-adapter-slack = { path = "../../crates/adapters/slack" }
lethe-api = { path = "../../crates/api" }
lethe-core = { path = "../../crates/core" }
lethe-derivation-gemini = { path = "../../crates/derivations/gemini" }
lethe-engine = { path = "../../crates/engine" }
lethe-policy = { path = "../../crates/policy" }
lethe-profile-model = { path = "../../crates/profile-model" }
lethe-projection-person = { path = "../../crates/projections/person" }
lethe-registry = { path = "../../crates/registry" }
lethe-storage-sqlite = { path = "../../crates/storage/sqlite" }
regex.workspace = true
reqwest.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tower.workspace = true
