[package]
name = "lethe-selfhost"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
arc-swap.workspace = true
base64.workspace = true
chrono.workspace = true
hex.workspace = true
lethe-adapter-api = { path = "../../crates/adapters/api" }
lethe-adapter-gslides = { path = "../../crates/adapters/gslides" }
lethe-adapter-slack = { path = "../../crates/adapters/slack" }
lethe-api = { path = "../../crates/api" }
lethe-core = { path = "../../crates/core" }
lethe-derivation-gemini = { path = "../../crates/derivations/gemini" }
lethe-engine = { path = "../../crates/engine" }
lethe-history = { path = "../../crates/history" }
lethe-policy = { path = "../../crates/policy" }
lethe-profile-model = { path = "../../crates/profile-model" }
lethe-projection-answer-log = { path = "../../crates/projections/answer-log" }
lethe-projection-claim-queue = { path = "../../crates/projections/claim-queue" }
lethe-projection-cognition = { path = "../../crates/projections/cognition" }
lethe-projection-corpus = { path = "../../crates/projections/corpus" }
lethe-projection-person = { path = "../../crates/projections/person" }
lethe-registry = { path = "../../crates/registry" }
lethe-runtime = { path = "../../crates/runtime" }
lethe-search-index = { path = "../../crates/search-index" }
lethe-storage-api = { path = "../../crates/storage/api" }
lethe-storage-postgres = { path = "../../crates/storage/postgres" }
lethe-storage-sqlite = { path = "../../crates/storage/sqlite" }
regex.workspace = true
reqwest.workspace = true
ring.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true

[dev-dependencies]
lethe-adapter-claude = { path = "../../crates/adapters/claude" }
pretty_assertions.workspace = true
tower.workspace = true
