[package]
name = "lethe-api"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
lethe-core = { path = "../core" }
lethe-engine = { path = "../engine" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
