[package]
name = "lethe-engine"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
jsonschema.workspace = true
lethe-core = { path = "../core" }
lethe-policy = { path = "../policy" }
lethe-registry = { path = "../registry" }
lethe-storage-api = { path = "../storage/api" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
