[package]
name = "lethe-adapter-api"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
lethe-core = { path = "../../core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
