[package]
name = "lethe-adapter-notion"
version.workspace = true
edition.workspace = true

[dependencies]
hex.workspace = true
image.workspace = true
lethe-adapter-api = { path = "../api" }
lethe-profile-model = { path = "../../profile-model" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
