[package]
name = "lethe-projection-claim-queue"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
lethe-core = { path = "../../core" }
lethe-engine = { path = "../../engine" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true
