[package]
name = "lethe-projection-corpus"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
lethe-core = { path = "../../core" }
lethe-engine = { path = "../../engine" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-normalization.workspace = true
