[package]
name = "lethe-projection-person"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
lethe-core = { path = "../../core" }
lethe-engine = { path = "../../engine" }
lethe-policy = { path = "../../policy" }
lethe-profile-model = { path = "../../profile-model" }
serde.workspace = true
serde_json.workspace = true
