[package]
name = "lethe-storage-postgres"
version.workspace = true
edition.workspace = true

[dependencies]
hex.workspace = true
lethe-core = { path = "../../core" }
lethe-storage-api = { path = "../api" }
postgres.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
