[package]
name = "lethe-storage-sqlite"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
lethe-core = { path = "../../core" }
lethe-runtime = { path = "../../runtime" }
rusqlite.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
