[package]
name = "lethe-storage-sqlite"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm.workspace = true
arc-swap.workspace = true
chrono.workspace = true
hex.workspace = true
lethe-core = { path = "../../core" }
lethe-runtime = { path = "../../runtime" }
lethe-storage-api = { path = "../api" }
rusqlite.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
